# aoc-solver

./: LICENSE  README.md  pyproject.toml
src/advent_of_code/: calorie_counting.py  rock_paper_scissors.py  rucksack_reorganization.py  solver.py  types.py  utilities.py
src/advent_of_code/2022/: rock_paper_scissors.py
src/advent_of_code/utilities/: calorie_parser.py  parser.py  puzzle_input_reader.py
src/aoc_solver/: cli.py  object_types.py  puzzle_manager.py  solver.py  utilities.py
src/aoc_solver/2020/: day_01.py
src/aoc_solver/2021/: day_01.py  day_25.py  sonar_sweep.py
src/aoc_solver/2022/: calorie_counting.py  camp_cleanup.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  rock_paper_scissors.py  rucksack_reorganization.py  supply_stacks.py
src/aoc_solver/2023/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py
src/aoc_solver/2024/: day_01.py  day_02.py  day_03.py  day_03.txt
src/aoc_solver/authenticators/: README.md  github.py  utilities.py
src/aoc_solver/session/: README.md  authenticator.py  github.py
src/scripts/: solver.py
src/templates/: day_n.py.template  test_day_n.py.template
tests/: conftest.py
tests/advent_of_code/: test_calorie_counting.py  test_rock_paper_scissors.py  test_rucksack_reorganization.py  test_solver.py
tests/advent_of_code/2022/: test_calorie_counting.py  test_rock_paper_scissors.py  test_rucksack_reorganization.py
tests/advent_of_code/utilities/: test_calorie_parser.py  test_parser.py
tests/aoc_solver/: conftest.py  test_object_types.py  test_puzzle_manager.py  test_solver.py  test_utilities.py
tests/aoc_solver/2020/: test_day_01.py
tests/aoc_solver/2021/: test_day_01.py  test_day_25.py  test_sonar_sweep.py
tests/aoc_solver/2022/: test_calorie_counting.py  test_camp_cleanup.py  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_rock_paper_scissors.py  test_rucksack_reorganization.py  test_supply_stacks.py
tests/aoc_solver/2023/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py
tests/aoc_solver/2024/: test_day_01.py  test_day_02.py
tests/aoc_solver/authenticators/: test_github.py  test_utilities.py
tests/aoc_solver/session/: test_authenticator.py  test_github.py
tests/integration/: test_authenticator_session.py  test_cli.py  test_solver.py
tests/integration/session/: test_authenticator.py
tests/unit/: test_cli.py  test_puzzle_manager.py
tests/unit/2021/: test_day_01.py
tests/unit/2022/: test_day_03.py  test_day_04.py  test_day_07.py
tests/unit/2023/: test_day_02.py  test_day_05.py  test_day_07.py  test_day_09.py
tests/unit/2024/: test_day_01.py  test_day_02.py  test_day_03.py
