[tool.poetry]
name = "aoc-solver"
version = "0.1.0"
description = "CLI Tool to run my Advent of Code solutions"
license = "MIT"
authors = ["Lando Toothman <25360446+TheLandolorien@users.noreply.github.com>"]
readme = "README.md"
packages = [
  { include = "aoc_solver", "from" = "src" }
]
repository = "https://github.com/thelandolorien/aoc-solver"
keywords = ["Advent of Code"]
classifiers = [
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "3.10.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[tool.pytest.ini_options]
minversion = "7.2.0"
pythonpath = "src"
testpaths = "tests/aoc_solver"
addopts = "-vv --import-mode=importlib"

[tool.poetry.scripts]
aoc-solver = "aoc_solver.solver:solve"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/thelandolorien/advent-of-code/issues"
"Say Thanks!" = "https://www.buymeacoffee.com/thelandolorien"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
