[tool.poetry]
name = "aoc-solver"
version = "0.1.0"
description = "CLI Tool to run my Advent of Code solutions"
license = "MIT"
authors = ["Lando Toothman <25360446+TheLandolorien@users.noreply.github.com>"]
readme = "README.md"
packages = [
  { include = "aoc_solver", "from" = "src" }
]
repository = "https://github.com/thelandolorien/aoc-solver"
keywords = ["Advent of Code"]
classifiers = [
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "3.11.5"
requests = "^2.31.0"
selenium = "^4.7.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.2.0"
pythonpath = "src"
testpaths = "tests/aoc_solver"
addopts = "-vv --import-mode=importlib --strict-markers"
markers = [
    "date_arg",
]

[tool.poetry.scripts]
aoc-solver = "aoc_solver.cli:run"

[tool.poe.tasks.test]
help = "Default: Run application test suites that support coverage"
sequence = ["test-coverage"]

[tool.poe.tasks.test-all]
help = "Run all application test suites (without coverage)"
sequence = ["test-unit", "test-integration"]

[tool.poe.tasks.test-coverage]
help = "Run application test suites that support coverage"
cmd = "pytest --cov=src/aoc_solver --cov-fail-under=90 --cov-branch --cov-report term-missing:skip-covered tests/unit tests/integration"

[tool.poe.tasks.test-integration]
help = "Run integration tests only (without coverage)"
cmd = "pytest tests/integration"

[tool.poe.tasks.test-unit]
help = "Run unit tests only (without coverage)"
cmd = "pytest tests/unit"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/thelandolorien/advent-of-code/issues"
"Say Thanks!" = "https://www.buymeacoffee.com/thelandolorien"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
